--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
+[workspace]
+members = ["demo"]
 [package]
 name = "rustlings"
 description = "Small exercises to get you used to reading and writing Rust code!"
 version = "5.6.1"
 authors = [
-  "Liv <mokou@fastmail.com>",
-  "Carol (Nichols || Goulding) <carol.nichols@gmail.com>",
+    "Liv <mokou@fastmail.com>",
+    "Carol (Nichols || Goulding) <carol.nichols@gmail.com>",
 ]
 edition = "2021"
 
@@ -19,6 +21,8 @@ serde_json = "1.0.81"
 home = "0.5.3"
 glob = "0.3.0"
 clap = { version = "4.4.0", features = ["derive"] }
+log = "0.4.22"
+env_logger = "0.11.3"
 
 [[bin]]
 name = "rustlings"
